--- a/clue1.html
+++ b/clue1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Word Search Puzzle Challenge</title>
+  <title>Word Search Puzzle Challenge Related</title>
   <link rel="stylesheet" href="1.css">
   <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
   <style>
@@ -39,7 +39,7 @@
 <body>
   <div class="container">
     <h1>The Word Search Puzzle Challenge</h1>
-    <h2>Find the Hidden Words</h2>
+    <h2>Find the Hidden Words Horror Theme</h2>
     
     <!-- Word Search Puzzle Area -->
     <div class="puzzle-container">
